After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752417 - Failure to create storage pool
Failure to create storage pool
Status: RESOLVED FIXED
Product: gnome-boxes
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: --
Assigned To: GNOME Boxes maintainer(s)
GNOME Boxes maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-15 12:18 UTC by Zeeshan Ali
Modified: 2016-09-20 08:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vm-configurator: Don't create pool directory (1.11 KB, patch)
2015-07-15 12:19 UTC, Zeeshan Ali
none Details | Review
vm-configurator: Don't create pool directory (1.16 KB, patch)
2015-07-15 12:19 UTC, Zeeshan Ali
none Details | Review
vm-creator: Make use of internal util functions (1.19 KB, patch)
2015-07-15 16:45 UTC, Zeeshan Ali
committed Details | Review
vm-creator: Ensure images dir even if pool is active (1.65 KB, patch)
2015-07-15 16:45 UTC, Zeeshan Ali
committed Details | Review
vm-configurator: Don't create pool directory (1.16 KB, patch)
2015-07-15 16:46 UTC, Zeeshan Ali
committed Details | Review
vm-creator: get_storage_pool() -> Util.ensure_storage_pool() (4.73 KB, patch)
2015-07-15 16:46 UTC, Zeeshan Ali
committed Details | Review
util-app: Always refresh storage pool (1.82 KB, patch)
2015-07-15 16:46 UTC, Zeeshan Ali
committed Details | Review
libvirt-broker: Make use of ensure_storage_pool() (1.35 KB, patch)
2015-07-15 16:46 UTC, Zeeshan Ali
committed Details | Review

Description Zeeshan Ali 2015-07-15 12:18:57 UTC
Seems the patch we applied for bug#668536, now causes problems with newer (don't know when this changed) libvirt: libvirt bails out on building the pool if underlying directory already exists.
Comment 1 Zeeshan Ali 2015-07-15 12:19:01 UTC
Created attachment 307472 [details] [review]
vm-configurator: Don't create pool directory

Seems latest libvirt errors out on building the storage pool building if
underlying directory already exists. This patch basically reverts commit
c2a77d21, which we shouldn't need anymore any way since we have code that
handles the situation of user moving or removing the directory in
VMCreator.get_storage_pool().
Comment 2 Zeeshan Ali 2015-07-15 12:19:50 UTC
Created attachment 307473 [details] [review]
vm-configurator: Don't create pool directory

Seems latest libvirt errors out on building the storage pool building if
underlying directory already exists. This patch basically reverts commit
c2a77d21, which we shouldn't need anymore any way since we have code that
handles the situation of user moving or removing the directory in
VMCreator.get_storage_pool().
Comment 3 Zeeshan Ali 2015-07-15 16:45:39 UTC
Created attachment 307491 [details] [review]
vm-creator: Make use of internal util functions

Make code simpler by use of internal util function to ensure storage
pool directory exists.
Comment 4 Zeeshan Ali 2015-07-15 16:45:57 UTC
Created attachment 307492 [details] [review]
vm-creator: Ensure images dir even if pool is active

Seems it's possible for storage pool to remain active even if underlying
directory is removed. Let's always ensure images directory exists.
Comment 5 Zeeshan Ali 2015-07-15 16:46:11 UTC
Created attachment 307493 [details] [review]
vm-configurator: Don't create pool directory

Seems latest libvirt errors out on building the storage pool building if
underlying directory already exists. This patch basically reverts commit
c2a77d21, which we shouldn't need anymore any way since we have code that
handles the situation of user moving or removing the directory in
VMCreator.get_storage_pool().
Comment 6 Zeeshan Ali 2015-07-15 16:46:29 UTC
Created attachment 307494 [details] [review]
vm-creator: get_storage_pool() -> Util.ensure_storage_pool()

Make protected function of VMCreator that ensures storage pool exists, a
public utility function so other modules can use it too.
Comment 7 Zeeshan Ali 2015-07-15 16:46:40 UTC
Created attachment 307495 [details] [review]
util-app: Always refresh storage pool

Let's make refreshing of storage pool an unconditional activity of
ensure_storage_pool() utility function.
Comment 8 Zeeshan Ali 2015-07-15 16:46:51 UTC
Created attachment 307496 [details] [review]
libvirt-broker: Make use of ensure_storage_pool()
Comment 9 Zeeshan Ali 2015-07-15 16:47:57 UTC
Attachment 307491 [details] pushed as 9320041 - vm-creator: Make use of internal util functions
Attachment 307492 [details] pushed as 81075d3 - vm-creator: Ensure images dir even if pool is active
Attachment 307493 [details] pushed as afb7150 - vm-configurator: Don't create pool directory
Attachment 307494 [details] pushed as 9ebdcf9 - vm-creator: get_storage_pool() -> Util.ensure_storage_pool()
Attachment 307495 [details] pushed as aa23403 - util-app: Always refresh storage pool
Attachment 307496 [details] pushed as 5f48f07 - libvirt-broker: Make use of ensure_storage_pool()
Comment 10 Christophe Fergeau 2015-07-16 11:25:34 UTC
Looks like https://www.redhat.com/archives/libvir-list/2015-July/msg00597.html